Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17288

Symbian raster surface doesn't get an alpha channel when WA_TranslucentBackground is set

    XMLWordPrintable

Details

    • ca663a72, bf47aa67e286f31db5

    Description

      When using the openvg graphics system, with the fix for QT-4416 applied, the following occurs if WA_TranslucentBackground is set after the native window is created:
      1. Create widget
      2. Show widget - EGL window surface is created
      3. Set WA_TranslucentBackground attribute
      a) Appropriate RWindow functions are called to make the native window transparent
      b) EGL surface is destroyed, and replaced with a raster surface with EColor16MA(P) display mode

      When using the raster graphics system:
      1. Create widget
      2. Show widget - raster surface is created with EColor16MU display mode
      3. Set WA_TranslucentBackground attribute
      a) Appropriate RWindow functions are called to make the native window transparent
      b) Raster surface is left unchanged

      The result is that the alpha values written by the raster paint engine into the raster surface are ignored by the window system. The EColor16MU bitmap needs to be destroyed and replaced with an EColor16MA(P) one.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gastockw Gareth Stockwell
            gastockw Gareth Stockwell
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes