Recreate Symbian raster backing store when WA_TranslucentBackground set

Task-number: QTBUG-17288
Reviewed-by: Jani Hautakangas
(cherry picked from commit ca663a7252637f8066a0e7368650e72094220b69)