src/gui/image/qpixmap_s60_p.h
@@ -54,6 +54,7 @@
 //
 
 #include <QtGui/private/qpixmap_raster_p.h>
+#include <displaymode.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -106,6 +107,8 @@ public:
 
     void* toNativeType(NativeType type);
     void fromNativeType(void* pixmap, NativeType type);
+
+    void convertToDisplayMode(TDisplayMode mode);
 
 private:
     void release();
